Enhance tutorial video handling by updating file path logic and improving duration extraction with error handling